# eth-dataset-kaggle-updater

./: .gitignore  README.md  ethereum_fetch.py  fetch_full_eth_data.py  fetch_new_eth_data_format.py  pyproject.toml
.github/workflows/: main.yml
ethereum_data/: eth_1d_data_2020_to_2025.csv  eth_4h_data_2020_to_2025.csv
ethereum_dataset_kaggle_auto_updater/: kaggle_update_ethereum.py
